Add readahead buffer and zero-copy BytesIO support to C decoder
- Add configurable readahead buffer (default 4KB) to reduce Python read() calls
- Zero-copy buffer access for BytesIO inputs via getvalue()
- Add read_size parameter to CBORDecoder.__init__
- Per-instance buffers for thread-safety (Python 3.13+ free-threaded)

Performance: ~2x faster for large data (reduced read calls from millions to hundreds)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ name = "cbor2"
 description = "CBOR (de)serializer with extensive tag support"
 readme = "README.rst"
 authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
-license = "MIT"
+license = {text = "MIT"}
 keywords = ["serialization", "cbor"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
